# python-learning

./: README.md  pyproject.toml
deep-learning/: cross-entropy.py  deep-net.py  logistic_regression.py  natural-language-processing.py
google/: __init__.py
google/colab/: __init__.py  files.py
