[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.14",
    "tensorflow>=2.15.0,<2.16.0",
    "nltk>=3.9.2",
    "seaborn>=0.13.2",
    "google>=3.0.0",
    "protobuf>=3.20.0",
]

[tool.setuptools]
packages = ["google"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
